Trying to fix header on mobile.

--- a/src/css/site/99_override.css
+++ b/src/css/site/99_override.css
@@ -38,7 +38,7 @@ a.logo-fixed > img {
   background-color: white;
 }
 .navbar {
-  min-height: 60px;
+  min-height: 61px;
   margin-bottom: 10px;
 }
 .navbar-toggle {
